# langchain_digitalguidebook_suggestions

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
airbnb/price_prediction/: predict.py
airbnb/scraper/: clean_data.py  consts.py  format_details.py  get_data.py  prompts.py  scrape.py
airbnb/seasonality_prediction/: generated.py  predict.py
conversationalModel/: db_access.py  embeddings.py
db/: connect.py  crud.py  models.py  seed.py
indeply/: app.py
indeply/db/: connect.py  crud.py  models.py  seed.py
indeply/langchainAgent/: __init__.py  models.py  prompts.py  systemPrompts.py  tools.py
indeply/ocr/: __init__.py  processIDs.py  prompts.py
langchainAgent/: tools.py
ocr/: prompts.py
services/: openai_service.py  supabase_service.py
